--- a/categories/image2text/_posts/2022-12-20-image2text.md
+++ b/categories/image2text/_posts/2022-12-20-image2text.md
@@ -10,6 +10,12 @@ sidebar:
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [SeqDiffuSeq: Text Diffusion with Encoder-Decoder Transformers](http://arxiv.org/abs/2212.10325v1) | Hongyi Yuan, Zheng Yuan, Chuanqi Tan, Fei Huang, Songfang Huang | cs.CL | 2022-12-20 |
+| [One Embedder, Any Task: Instruction-Finetuned Text Embeddings](http://arxiv.org/abs/2212.09741v2) | Hongjin Su, Weijia Shi, Jungo Kasai, Yizhong Wang, Yushi Hu, Mari Ostendorf, Wen-tau Yih, Noah A. Smith, Luke Zettlemoyer, Tao Yu | cs.CL | 2022-12-19 |
+| [Switching to Discriminative Image Captioning by Relieving a Bottleneck  of Reinforcement Learning](http://arxiv.org/abs/2212.03230v1) | Ukyo Honda, Taro Watanabe, Yuji Matsumoto | cs.CV, cs.CL | 2022-12-06 |
+| [Towards Generating Diverse Audio Captions via Adversarial Training](http://arxiv.org/abs/2212.02033v1) | Xinhao Mei, Xubo Liu, Jianyuan Sun, Mark D. Plumbley, Wenwu Wang | eess.AS, cs.AI, cs.MM, cs.SD | 2022-12-05 |
+| [Grounded Keys-to-Text Generation: Towards Factual Open-Ended Generation](http://arxiv.org/abs/2212.01956v1) | Faeze Brahman, Baolin Peng, Michel Galley, Sudha Rao, Bill Dolan, Snigdha Chaturvedi, Jianfeng Gao | cs.CL | 2022-12-04 |
+| [Learning Automata-Based Task Knowledge Representation from Large-Scale  Generative Language Models](http://arxiv.org/abs/2212.01944v1) | Yunhao Yang, Jean-Raphaël Gaglione, Ufuk Topcu | cs.FL, cs.CL | 2022-12-04 |
 | [3D-TOGO: Towards Text-Guided Cross-Category 3D Object Generation](http://arxiv.org/abs/2212.01103v1) | Zutao Jiang, Guangsong Lu, Xiaodan Liang, Jihua Zhu, Wei Zhang, Xiaojun Chang, Hang Xu | cs.CV, cs.AI | 2022-12-02 |
 | [On the Importance of Image Encoding in Automated Chest X-Ray Report  Generation](http://arxiv.org/abs/2211.13465v1) | Otabek Nazarov, Mohammad Yaqub, Karthik Nandakumar | cs.CV, cs.AI | 2022-11-24 |
 | [Retrieval-Augmented Multimodal Language Modeling](http://arxiv.org/abs/2211.12561v1) | Michihiro Yasunaga, Armen Aghajanyan, Weijia Shi, Rich James, Jure Leskovec, Percy Liang, Mike Lewis, Luke Zettlemoyer, Wen-tau Yih | cs.CV, cs.CL, cs.LG | 2022-11-22 |
