--- a/categories/poetry/_posts/2022-12-06-poetry.md
+++ b/categories/poetry/_posts/2022-12-06-poetry.md
@@ -10,6 +10,7 @@ sidebar:
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Modern French Poetry Generation with RoBERTa and GPT-2](http://arxiv.org/abs/2212.02911v1) | Mika Hämäläinen, Khalid Alnajjar, Thierry Poibeau | cs.CL | 2022-12-06 |
 | [Generation of Chinese classical poetry based on pre-trained model](http://arxiv.org/abs/2211.02541v1) | Ziyao Wang, Lujin Guan, Guanyu Liu | cs.CL, cs.AI, J.5; I.2.7 | 2022-11-04 |
 | [Controllable Text Generation for Open-Domain Creativity and Fairness](http://arxiv.org/abs/2209.12099v1) | Nanyun Peng | cs.CL, cs.AI | 2022-09-24 |
 | [Multi-Modal Experience Inspired AI Creation](http://arxiv.org/abs/2209.02427v1) | Qian Cao, Xu Chen, Ruihua Song, Hao Jiang, Guang Yang, Zhao Cao | cs.AI | 2022-09-02 |
