--- a/categories/story/_posts/2022-12-20-story.md
+++ b/categories/story/_posts/2022-12-20-story.md
@@ -10,6 +10,11 @@ sidebar:
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Little Red Riding Hood Goes Around the Globe:Crosslingual Story Planning  and Generation with Large Language Models](http://arxiv.org/abs/2212.10471v1) | Evgeniia Razumovskaia, Joshua Maynez, Annie Louis, Mirella Lapata, Shashi Narayan | cs.CL | 2022-12-20 |
+| [DOC: Improving Long Story Coherence With Detailed Outline Control](http://arxiv.org/abs/2212.10077v1) | Kevin Yang, Dan Klein, Nanyun Peng, Yuandong Tian | cs.CL, cs.AI | 2022-12-20 |
+| [Future Sight: Dynamic Story Generation with Large Pretrained Language  Models](http://arxiv.org/abs/2212.09947v1) | Brian D. Zimmerman, Gaurav Sahu, Olga Vechtomova | cs.CL, cs.AI, cs.LG | 2022-12-20 |
+| [Neural Story Planning](http://arxiv.org/abs/2212.08718v1) | Anbang Ye, Christopher Cui, Taiwei Shi, Mark O. Riedl | cs.CL, cs.AI | 2022-12-16 |
+| [Open-world Story Generation with Structured Knowledge Enhancement: A  Comprehensive Survey](http://arxiv.org/abs/2212.04634v1) | Yuxin Wang, Jieru Lin, Zhiwei Yu, Wei Hu, Börje F. Karlsson | cs.CL, cs.AI | 2022-12-09 |
 | [An FNet based Auto Encoder for Long Sequence News Story Generation](http://arxiv.org/abs/2211.08295v2) | Paul K. Mandal, Rakeshkumar Mahto | cs.CL, cs.AI, cs.LG, 68T07, 68T50, I.2.6; I.2.7 | 2022-11-15 |
 | [Creative Writing with an AI-Powered Writing Assistant: Perspectives from  Professional Writers](http://arxiv.org/abs/2211.05030v1) | Daphne Ippolito, Ann Yuan, Andy Coenen, Sehmon Burnam | cs.HC, cs.CL | 2022-11-09 |
 | [Human-Machine Collaboration Approaches to Build a Dialogue Dataset for  Hate Speech Countering](http://arxiv.org/abs/2211.03433v1) | Helena Bonaldi, Sara Dellantonio, Serra Sinem Tekiroglu, Marco Guerini | cs.CL, cs.CY | 2022-11-07 |
