--- a/categories/dialogue/_posts/2022-12-20-dialogue.md
+++ b/categories/dialogue/_posts/2022-12-20-dialogue.md
@@ -10,6 +10,12 @@ sidebar:
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Enhancing Task Bot Engagement with Synthesized Open-Domain Dialog](http://arxiv.org/abs/2212.10008v1) | Miaoran Li, Baolin Peng, Michel Galley, Jianfeng Gao, Zhu Zhang | cs.CL, cs.AI | 2022-12-20 |
+| [Future Sight: Dynamic Story Generation with Large Pretrained Language  Models](http://arxiv.org/abs/2212.09947v1) | Brian D. Zimmerman, Gaurav Sahu, Olga Vechtomova | cs.CL, cs.AI, cs.LG | 2022-12-20 |
+| [SEScore2: Retrieval Augmented Pretraining for Text Generation Evaluation](http://arxiv.org/abs/2212.09305v1) | Wenda Xu, Xian Qian, Mingxuan Wang, Lei Li, William Yang Wang | cs.CL | 2022-12-19 |
+| [ChatGPT: The End of Online Exam Integrity?](http://arxiv.org/abs/2212.09292v1) | Teo Susnjak | cs.AI, cs.CL | 2022-12-19 |
+| [Rainproof: An Umbrella To Shield Text Generators From  Out-Of-Distribution Data](http://arxiv.org/abs/2212.09171v1) | Maxime Darrin, Pablo Piantanida, Pierre Colombo | cs.CL | 2022-12-18 |
+| [Plansformer: Generating Symbolic Plans using Transformers](http://arxiv.org/abs/2212.08681v1) | Vishal Pallagani, Bharath Muppasani, Keerthiram Murugesan, Francesca Rossi, Lior Horesh, Biplav Srivastava, Francesco Fabiano, Andrea Loreggia | cs.AI | 2022-12-16 |
 | [ConvLab-3: A Flexible Dialogue System Toolkit Based on a Unified Data  Format](http://arxiv.org/abs/2211.17148v1) | Qi Zhu, Christian Geishauser, Hsien-chin Lin, Carel van Niekerk, Baolin Peng, Zheng Zhang, Michael Heck, Nurul Lubis, Dazhen Wan, Xiaochen Zhu, Jianfeng Gao, Milica Gašić, Minlie Huang | cs.CL, cs.AI | 2022-11-30 |
 | [MUSIED: A Benchmark for Event Detection from Multi-Source Heterogeneous  Informal Texts](http://arxiv.org/abs/2211.13896v1) | Xiangyu Xi, Jianwei Lv, Shuaipeng Liu, Wei Ye, Fan Yang, Guanglu Wan | cs.CL | 2022-11-25 |
 | [Human-Machine Collaboration Approaches to Build a Dialogue Dataset for  Hate Speech Countering](http://arxiv.org/abs/2211.03433v1) | Helena Bonaldi, Sara Dellantonio, Serra Sinem Tekiroglu, Marco Guerini | cs.CL, cs.CY | 2022-11-07 |
