update and code error 12/31

--- a/categories/games/_posts/2022-12-24-games.md
+++ b/categories/games/_posts/2022-12-24-games.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2022-12-21*
+*written on 2023-01-02*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [On Realization of Intelligent Decision-Making in the Real World: A  Foundation Decision Model Perspective](http://arxiv.org/abs/2212.12669v1) | Ying Wen, Ziyu Wan, Ming Zhou, Shufang Hou, Zhe Cao, Chenyang Le, Jingxiao Chen, Zheng Tian, Weinan Zhang, Jun Wang | cs.AI, cs.LG | 2022-12-24 |
 | [Synthesis and Evaluation of a Domain-specific Large Data Set for  Dungeons & Dragons](http://arxiv.org/abs/2212.09080v1) | Akila Peiris, Nisansa de Silva | cs.CL, cs.LG | 2022-12-18 |
 | [Reward Gaming in Conditional Text Generation](http://arxiv.org/abs/2211.08714v1) | Richard Yuanzhe Pang, Vishakh Padmakumar, Thibault Sellam, Ankur P. Parikh, He He | cs.CL, cs.AI, cs.LG | 2022-11-16 |
 | [CLSE: Corpus of Linguistically Significant Entities](http://arxiv.org/abs/2211.02423v1) | Aleksandr Chuklin, Justin Zhao, Mihir Kale | cs.CL | 2022-11-04 |
