--- a/categories/image2text/_posts/2022-12-30-image2text.md
+++ b/categories/image2text/_posts/2022-12-30-image2text.md
@@ -10,6 +10,7 @@ sidebar:
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [MAUVE Scores for Generative Models: Theory and Practice](http://arxiv.org/abs/2212.14578v1) | Krishna Pillutla, Lang Liu, John Thickstun, Sean Welleck, Swabha Swayamdipta, Rowan Zellers, Sewoong Oh, Yejin Choi, Zaid Harchaoui | cs.LG, cs.AI, cs.CL | 2022-12-30 |
 | [Noise-aware Learning from Web-crawled Image-Text Data for Image  Captioning](http://arxiv.org/abs/2212.13563v1) | Wooyoung Kang, Jonghwan Mun, Sungjun Lee, Byungseok Roh | cs.CV, cs.AI | 2022-12-27 |
 | [On Realization of Intelligent Decision-Making in the Real World: A  Foundation Decision Model Perspective](http://arxiv.org/abs/2212.12669v1) | Ying Wen, Ziyu Wan, Ming Zhou, Shufang Hou, Zhe Cao, Chenyang Le, Jingxiao Chen, Zheng Tian, Weinan Zhang, Jun Wang | cs.AI, cs.LG | 2022-12-24 |
 | [Do DALL-E and Flamingo Understand Each Other?](http://arxiv.org/abs/2212.12249v1) | Hang Li, Jindong Gu, Rajat Koner, Sahand Sharifzadeh, Volker Tresp | cs.CV, cs.LG | 2022-12-23 |
