--- a/categories/table2text/_posts/2022-12-30-table2text.md
+++ b/categories/table2text/_posts/2022-12-30-table2text.md
@@ -10,6 +10,7 @@ sidebar:
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [MAUVE Scores for Generative Models: Theory and Practice](http://arxiv.org/abs/2212.14578v1) | Krishna Pillutla, Lang Liu, John Thickstun, Sean Welleck, Swabha Swayamdipta, Rowan Zellers, Sewoong Oh, Yejin Choi, Zaid Harchaoui | cs.LG, cs.AI, cs.CL | 2022-12-30 |
 | [TegFormer: Topic-to-Essay Generation with Good Topic Coverage and High  Text Coherence](http://arxiv.org/abs/2212.13456v1) | Wang Qi, Rui Liu, Yuan Zuo, Yong Chen, Dell Zhang | cs.CL | 2022-12-27 |
 | [TextBox 2.0: A Text Generation Library with Pre-trained Language Models](http://arxiv.org/abs/2212.13005v1) | Tianyi Tang, Junyi Li, Zhipeng Chen, Yiwen Hu, Zhuohao Yu, Wenxun Dai, Zican Dong, Xiaoxue Cheng, Yuhao Wang, Wayne Xin Zhao, Jian-Yun Nie, Ji-Rong Wen | cs.CL | 2022-12-26 |
 | [CORRPUS: Detecting Story Inconsistencies via Codex-Bootstrapped  Neurosymbolic Reasoning](http://arxiv.org/abs/2212.10754v1) | Yijiang River Dong, Lara J. Martin, Chris Callison-Burch | cs.CL | 2022-12-21 |
