bug fix and update

--- a/categories/story/_posts/2023-01-07-story.md
+++ b/categories/story/_posts/2023-01-07-story.md
@@ -6,10 +6,11 @@ sidebar:
 ---
 
 
-*written on 2023-01-02*
+*written on 2023-01-14*
 
 | title | authors | categories | displaydate |
 | ----- | ----- | ----- | ----- |
+| [Visual Story Generation Based on Emotion and Keywords](http://arxiv.org/abs/2301.02777v1) | Yuetian Chen, Ruohua Li, Bowen Shi, Peiru Liu, Mei Si | cs.AI, cs.CL, cs.LG | 2023-01-07 |
 | [A Comprehensive Gold Standard and Benchmark for Comics Text Detection  and Recognition](http://arxiv.org/abs/2212.14674v1) | Gürkan Soykan, Deniz Yuret, Tevfik Metin Sezgin | cs.CL, cs.AI | 2022-12-27 |
 | [CORRPUS: Detecting Story Inconsistencies via Codex-Bootstrapped  Neurosymbolic Reasoning](http://arxiv.org/abs/2212.10754v1) | Yijiang River Dong, Lara J. Martin, Chris Callison-Burch | cs.CL | 2022-12-21 |
 | [Little Red Riding Hood Goes Around the Globe:Crosslingual Story Planning  and Generation with Large Language Models](http://arxiv.org/abs/2212.10471v1) | Evgeniia Razumovskaia, Joshua Maynez, Annie Louis, Mirella Lapata, Shashi Narayan | cs.CL | 2022-12-20 |
